# leaper

./: .dockerignore  .gitignore  README.md  build_wolfram_index_names.py  graphNames.csv  graphsCanonical.py  leap_groups.csv  pyproject.toml
.github/workflows/: deploy-frontend.yml
backend/: Dockerfile  app.py  models.py
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  ControlPanel.jsx  HopPalette.jsx  NotebookEntry.jsx  WorkingLeap.jsx  global.css  graphFile.js  graphLibrary.js  graphLibraryModal.jsx  index.css  permUtils.js  workspace.js
frontend/src/components/: ControlPanel.css  ControlPanel.jsx  DatabasePage.css  DatabasePage.jsx  DrawHopBar.css  DrawHopBar.jsx  GraphLibraryModal.css  HelpModal.css  HelpModal.jsx  HopPalette.css  HopPalette.jsx  MenuBar.css  MenuBar.jsx  NotebookEntry.css  NotebookEntry.jsx  Randomizer.css  Randomizer.jsx  SettingsModal.css  SettingsModal.jsx  Sidebar.css  Sidebar.jsx  Toasts.css  Toasts.jsx  Toolbar.css  Toolbar.jsx  WorkingLeap.css  WorkingLeap.jsx  graphLibraryModal.jsx
frontend/src/data/: leapDatabaseCore.json
frontend/src/hooks/: useCytoscape.js  useDrawHop.js  useFileOperations.js  useHopInteraction.js  useKeyboardShortcuts.js  useToast.js
frontend/src/lib/: api.js  fileAccess.js  graphFile.js  graphGenerators.js  graphLibrary.js  leapDatabase.js  permUtils.js  workspace.js
results/: leap_groups.csv
scripts/database/: README.md  build_database.py  verify_database.py
src/leaper/: leaper.py
